compiler-core/lexing/tests/snapshots/layout__ado_terminal_recovery_qualified_name.snap
---
source: compiler-core/lexing/tests/layout.rs
expression: "print_tokens(&lexed, &tokens)"
---
test = ado{
  action}
  Qualified.<eof>
