compiler-core/lexing/tests/snapshots/layout__ado_terminal_recovery_same_line.snap
---
source: compiler-core/lexing/tests/layout.rs
expression: "print_tokens(&lexed, &tokens)"
---
test = ado{ action}<eof>
