compiler-core/lexing/tests/snapshots/layout__case_where.snap
---
source: compiler-core/lexing/tests/layout.rs
expression: "print_tokens(&lexed, &tokens)"
---
module Test where{

test = case foo of{
  Nothing -> a
    where{ a = 12};
  Just a -> do{
    what;}}
  where{
    foo = bar};

test = case f of{ Foo -> do{ that;}
                        where{ foo = 12}}}
<eof>
