compiler-core/lexing/tests/snapshots/layout__delimiter.snap
---
source: compiler-core/lexing/tests/layout.rs
expression: "print_tokens(&lexed, &tokens)"
---
module Test where{

test1 = a;
test2 = {
  b
};
test3 = do{
  foo;
  bar (
    baz
  ) == 12;
  baz;};
test4 = c}
<eof>
